[gd_scene load_steps=9 format=3 uid="uid://bdpqhet5pr4sm"]

[ext_resource type="Texture2D" uid="uid://d0rmhscy6f1rl" path="res://Assets/Chapters Screen Assets/Chapters Menu Screen.png" id="1_o5h7k"]
[ext_resource type="Script" uid="uid://dv6rpt1r4a75h" path="res://Scripts/Menu Scripts/ChaptersScreen.gd" id="1_vg3ar"]
[ext_resource type="Texture2D" uid="uid://dch6rk4g5cipp" path="res://Assets/Chapters Screen Assets/Chapter 1 BUTTON (not hovered).png" id="2_vg3ar"]
[ext_resource type="Texture2D" uid="uid://c8xlenj7fikq8" path="res://Assets/Chapters Screen Assets/Chapter 2 BUTTON (not hovered).png" id="4_luj2l"]
[ext_resource type="Texture2D" uid="uid://cs85cakvkgi1w" path="res://Assets/Chapters Screen Assets/Chapter 3 BUTTON (not hovered).png" id="6_h7y76"]
[ext_resource type="Texture2D" uid="uid://dgaiakbbqn3w2" path="res://Assets/Level Button Assets/Chapters Locked Button (not hovered).png" id="7_5wnku"]
[ext_resource type="Texture2D" uid="uid://bwchv7e2buxax" path="res://Assets/Chapters Screen Assets/Chapter 4 BUTTON (not hovered).png" id="8_cx5ka"]
[ext_resource type="Texture2D" uid="uid://crlfeyg4504ld" path="res://Assets/Menu Buttons/Back BUTTON (not hovered).png" id="10_3p7on"]

[node name="ChaptersScreen" type="Node2D"]
script = ExtResource("1_vg3ar")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Chapters" type="Sprite2D" parent="Background"]
position = Vector2(270, 480)
texture = ExtResource("1_o5h7k")

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Chapter1" type="TouchScreenButton" parent="Buttons"]
position = Vector2(121, 292)
texture_normal = ExtResource("2_vg3ar")

[node name="Chapter2" type="TouchScreenButton" parent="Buttons"]
position = Vector2(121, 383)
texture_normal = ExtResource("4_luj2l")

[node name="LockedOverlay" type="TextureRect" parent="Buttons/Chapter2"]
offset_top = -91.0
offset_right = 300.0
offset_bottom = 9.0
texture = ExtResource("7_5wnku")

[node name="Chapter3" type="TouchScreenButton" parent="Buttons"]
position = Vector2(120, 476)
texture_normal = ExtResource("6_h7y76")

[node name="LockedOverlay" type="TextureRect" parent="Buttons/Chapter3"]
offset_top = -91.0
offset_right = 300.0
offset_bottom = 9.0
texture = ExtResource("7_5wnku")

[node name="Chapter4" type="TouchScreenButton" parent="Buttons"]
position = Vector2(121, 568)
texture_normal = ExtResource("8_cx5ka")

[node name="LockedOverlay" type="TextureRect" parent="Buttons/Chapter4"]
offset_top = -91.0
offset_right = 300.0
offset_bottom = 9.0
texture = ExtResource("7_5wnku")

[node name="BackButton" type="TouchScreenButton" parent="Buttons"]
position = Vector2(119, 768)
texture_normal = ExtResource("10_3p7on")

[connection signal="pressed" from="Buttons/Chapter1" to="." method="_on_chapter_1_pressed"]
[connection signal="pressed" from="Buttons/Chapter2" to="." method="_on_chapter_2_pressed"]
[connection signal="pressed" from="Buttons/Chapter3" to="." method="_on_chapter_3_pressed"]
[connection signal="pressed" from="Buttons/Chapter4" to="." method="_on_chapter_4_pressed"]
[connection signal="pressed" from="Buttons/BackButton" to="." method="_on_back_button_pressed"]
